# h5i

./: CLAUDE.md  Cargo.toml  MANUAL.md  README.md
.claude/: h5i.md
docs/: index.html
src/: ast.rs  blame.rs  claude.rs  compliance.rs  crdt.rs  ctx.rs  delta_store.rs  error.rs  injection.rs  lib.rs  main.rs  memory.rs  metadata.rs  repository.rs  resume.rs  rules.rs  server.rs  session.rs  session_log.rs
