[package]
name = "h5i-core"
version = "0.1.0"
edition = "2021"

[dependencies]
git2 = "0.20.4"
yrs = "0.25.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
thiserror = "2.0.18"
anyhow = "1.0"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }