[package]
name = "h5i-core"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "h5i"
path = "src/main.rs"

[dependencies]
git2 = "0.20.4"
yrs = "0.25.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
thiserror = "2.0.18"
anyhow = "1.0"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
notify = "8.2.0"
clap = { version = "4.5.60", features = ["derive"] }
fastrand = "2.3.0"
tiktoken-rs = "0.9.1"
console = "0.16.2"
base64 = "0.22.1"
reqwest = { version = "0.12", features = ["blocking", "json"] }
axum = "0.7"

[dev-dependencies]
tempfile = "3.8"
